<resources>
    <string name="app_name">FFmpegDemo</string>
    <string name="title_name">FFmpeg Version</string>
    <string name="err_permission">Permission Error</string>

    <!--opengl test-->
    <string name="gl_triangle">gl_triangle</string>
    <string name="gl_txtMap">gl_txtMap</string>
    <string name="gl_nv21Map">gl_nv21Map</string>
    <string name="gl_VAO">gl_VAO</string>
    <string name="gl_FBO">gl_FBO</string>
    <string name="gl_EGL">gl_EGL</string>
</resources>